--- a/public/main.html
+++ b/public/main.html
@@ -75,13 +75,25 @@
       <h3>casa freesbee</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/01.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/02.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/03.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/04.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/05.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/06.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/07.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/08.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/09.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/10.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/11.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/12.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/13.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/14.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/15.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/16.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/17.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/18.jpg" alt="Image 1">
+      <img src="/assets/img/04_cenotafios_fotos/19.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
@@ -89,9 +101,11 @@
       <h3>casa freesbee</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="/assets/img/05_casa freesbee x rc/01.jpg" alt="Image 1">
+      <img src="/assets/img/05_casa freesbee x rc/02.jpg" alt="Image 1">
+      <img src="/assets/img/05_casa freesbee x rc/03.jpg" alt="Image 1">
+      <img src="/assets/img/05_casa freesbee x rc/04.jpg" alt="Image 1">
+      <img src="/assets/img/05_casa freesbee x rc/05.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
