--- a/public/main.html
+++ b/public/main.html
@@ -72,7 +72,7 @@
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>casa freesbee</h3>
+      <h3>cenotafios</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img src="/assets/img/04_cenotafios_fotos/01.jpg" alt="Image 1">
@@ -98,7 +98,7 @@
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>casa freesbee</h3>
+      <h3>casa freesbee x rc</h3>
       <p>lorem ipsum dolor</p>
       <br>
       <img src="/assets/img/05_casa freesbee x rc/01.jpg" alt="Image 1">
@@ -110,15 +110,15 @@
       <!-- Add more content here if needed -->
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>casa freesbee</h3>
-      <p>casa freesbee x Santiago Giusto</p>
+      <h3>casa freesbee x sg</h3>
+      <p></p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="public/assets/img/07_casa freesbee x sg/01.jpg" alt="Image 1">
+     <img src="public/assets/img/07_casa freesbee x sg/02.jpg" alt="Image 1">
+      <img src="public/assets/img/07_casa freesbee x sg/03.jpg" alt="Image 1">
+      <img src="public/assets/img/07_casa freesbee x sg/04.jpg" alt="Image 1">
+      <img src="public/assets/img/07_casa freesbee x sg/05.jpg" alt="Image 1">
+      <img src="public/assets/img/07_casa freesbee x sg/06.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
