--- a/public/main.html
+++ b/public/main.html
@@ -123,18 +123,57 @@
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>never even</h3>
+      <h3>el cuerpo hueco de la arquitectura</h3>
       <p>lorem ipsum dolor</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-01.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-02.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-03.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-04.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-05.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-06.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-07.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-08.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-09.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-10.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-11.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-12.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-13.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-14.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-15.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-16.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-18.jpg" alt="Image 1">
+      <img src="public/assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>matters of fact</h3>
-      <p>el inevitable sufrimiento de la arquitectura</p>
+      <h3>en el muro</h3>
+      <p>arruinar una habitación</p>
       <br>
+      <img src="public/assets/img/11_en el muro/01.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/02.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/03.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/04.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/05.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/06.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/07.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/08.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/09.jpg" alt="Image 1">
+      <img src="public/assets/img/11_en el muro/10.jpg" alt="Image 1">
+      <br>
+      <p>¿Qué distancia nos separa del afuera de un edificio cuando estamos en su interior? ¿Qué significa estar adentro de un edificio? ¿Qué espesor tienen los muros que delimitan las habitaciones en las que estamos? ¿Qué hay adentro de los muros? 
+En el centro de una habitación ubicamos un muro que en cada una de sus caras tiene dos vanos del tamaño de una puerta. La distancia entre las caras esta exagerada para volver espacial el interior del muro que en su piso tiene una montaña de tierra. En las caras laterales hay espejos que reflejan y repiten al infinito la imagen del muro. Una serie de perfiles metálicos sostienen al muro para que no ceda ante el empuje de la tierra. Dentro de estos perfiles hay semillas de diversas plantas florales que los concurrentes son invitados a tomar, introducirlas en un vasito de jardinería, rellenarlo con tierra y esperar que al llevarlo a su casa, germine y crezca una planta.
+Al igual que la luz, que permite ver lo iluminado al ocultarse a sí misma, los muros se hacen presentes al delimitar de manera invisible los espacios que habitamos. Un muro separa un lado de otro lado y en esta separación se pone en juego nuestra relación con la naturaleza. En este sentido al delimitar espacios hacemos cuentas con la naturaleza.
+</p>
+      <p>What is the distance that separates us from outside when we are inside a building? What does being inside a building mean? How thick are the walls that define the rooms we inhabit? What's inside these walls?
+In the center of a room we located a wall; on each side it has two openings the size of a door. The distance between the two sides is exaggerated in order to make the interior of the wall a living space, on the floor an earth mound occupies the gap. On the two ends of the installation there are mirrors that reflect and repeat to infinity the image of the wall, making visible its beginning and end.
+On each side of the wall there is a table with bean seeds, earth, paper bags and an instructive.
+Visitors can take a seed to plant it inside their own wall.
+This installation reflects on something that is present and allows each of the activities taking place within (and outside) the Matienzo Cultural Center.
+Like the light that illuminates by hiding from itself, the walls become present by invisibly defining the spaces we inhabit. A wall separates one side of the other side and in this separation our relationship with nature is at stake. In this regard we settle accounts with nature by defining living spaces.
+</p>
       <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore libero, error, eius rerum necessitatibus esse nesciunt eaque tempore nulla eos incidunt, voluptate minima totam cupiditate consectetur! Dolore, vero doloribus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatibus cumque! Ipsum, sed aspernatur minus maiores consectetur debitis eos earum atque ea fuga. Quam, eligendi! Rerum temporibus cum aut dolores?Lorem, ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatum, quidem deserunt obcaecati deleniti, porro eum quia voluptate nemo aspernatur placeat sequi nulla, voluptas laboriosam minima pariatur veritatis impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa explicabo omnis iure nam voluptatem cum nisi laboriosam a, laudantium temporibus sint, esse, earum repellat facere ratione vel dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa corporis error pariatur distinctio quod, illum ipsum, dolorem vero laborum vitae neque placeat rem suscipit corrupti ea voluptatem, totam ratione. Amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore libero, error, eius rerum necessitatibus esse nesciunt eaque tempore nulla eos incidunt, voluptate minima totam cupiditate consectetur! Dolore, vero doloribus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatibus cumque! Ipsum, sed aspernatur minus maiores consectetur debitis eos earum atque ea fuga. Quam, eligendi! Rerum temporibus cum aut dolores?Lorem, ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatum, quidem deserunt obcaecati deleniti, porro eum quia voluptate nemo aspernatur placeat sequi nulla, voluptas laboriosam minima pariatur veritatis impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa explicabo omnis iure nam voluptatem cum nisi laboriosam a, laudantium temporibus sint, esse, earum repellat facere ratione vel dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa corporis error pariatur distinctio quod, illum ipsum, dolorem vero laborum vitae neque placeat rem suscipit corrupti ea voluptatem, totam ratione. Amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore libero, error, eius rerum necessitatibus esse nesciunt eaque tempore nulla eos incidunt, voluptate minima totam cupiditate consectetur! Dolore, vero doloribus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatibus cumque! Ipsum, sed aspernatur minus maiores consectetur debitis eos earum atque ea fuga. Quam, eligendi! Rerum temporibus cum aut dolores?Lorem, ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatum, quidem deserunt obcaecati deleniti, porro eum quia voluptate nemo aspernatur placeat sequi nulla, voluptas laboriosam minima pariatur veritatis impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa explicabo omnis iure nam voluptatem cum nisi laboriosam a, laudantium temporibus sint, esse, earum repellat facere ratione vel dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa corporis error pariatur distinctio quod, illum ipsum, dolorem vero laborum vitae neque placeat rem suscipit corrupti ea voluptatem, totam ratione. Amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore libero, error, eius rerum necessitatibus esse nesciunt eaque tempore nulla eos incidunt, voluptate minima totam cupiditate consectetur! Dolore, vero doloribus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatibus cumque! Ipsum, sed aspernatur minus maiores consectetur debitis eos earum atque ea fuga. Quam, eligendi! Rerum temporibus cum aut dolores?Lorem, ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatum, quidem deserunt obcaecati deleniti, porro eum quia voluptate nemo aspernatur placeat sequi nulla, voluptas laboriosam minima pariatur veritatis impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa explicabo omnis iure nam voluptatem cum nisi laboriosam a, laudantium temporibus sint, esse, earum repellat facere ratione vel dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa corporis error pariatur distinctio quod, illum ipsum, dolorem vero laborum vitae neque placeat rem suscipit corrupti ea voluptatem, totam ratione. Amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quam dolores neque, inventore velit laboriosam nesciunt cum laborum ut eaque fuga voluptatibus molestias assumenda perferendis nam quod hic id quia.</p>
       <!-- Add more content here if needed -->
     </div>
